# butter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/butter-ecs/: Cargo.toml
crates/butter-ecs/src/: bitset.rs  commands.rs  lib.rs  query.rs  system.rs
crates/butter-graphics/: Cargo.toml
crates/butter-graphics/src/: lib.rs
crates/butter-math/: Cargo.toml
crates/butter-math/src/: lib.rs  quaternion.rs
examples/: window.rs
src/: ecs.rs  graphics.rs  lib.rs  window.rs  winit.rs
src/ecs/: mod.rs  query.rs  system.rs
